assets/src/modules/sm/App/styles/global.css
/* ... */
footer.main.default .OLDnav {
    font-size: 16px;
    margin-bottom: 10px;
    text-shadow: 0 1px 1px black;
}

footer.main.print {
    height: 50px;
    text-align: center;
    line-height: 50px;
    margin-top: -30px;
}

footer.main.print img {
    vertical-align: middle;
}

footer.main.print a {
    color: #000;
}

#print_header {
    margin: 0 0;
}

input[type=text] {
    margin-top: 0px;
}

/**************************************************************************/
/* GLOBAL STYLES */
/* Positioning - */

optgroup {
    font-weight: bold;
    font-style: normal;
    color: grey;
}

option {
    color: black;
}

/**************************************************************************/
/* INDEX */
#mainMenu {
    margin-top: 5%;
    margin-bottom: 5%;
    overflow: auto;
}

#mainMenu .navItem {
    margin: 0 auto;
    position: relative;
    text-align: center;
}

#mainMenu .navItem a:hover i {
    background: rgba(225, 225, 225, .1);
}

#mainMenu .navItem i {
    padding: 10px;
    border-radius: 10px;
    display: inline-block;
}

@media only screen and (max-width: 767px) {
    #mainMenu .navItem i {
        font-size: 50px;
    }
}

@media only screen and (min-width: 768px) {
    #mainMenu .navItem i {
        font-size: 200px;
    }
}

#mainMenu .navItem div {
    font-size: 18px;
    text-shadow: 0 1px 1px black;
    margin-top: 5%;
}

@media only screen and (max-width: 767px) {
    #mainMenu .navItem div a {
        font-size: 16px;
    }
}

#mainMenu .navItem a {
    color: #EEE;
    text-decoration: none;
}

#mainMenu td {
    padding: 15px;
}

.lbl {
    text-align: right;
}

form {
    margin-bottom: 5px;
}

/* VARIOUS FIXES */
.list-group li a {
    color: #333;
}

.list-group li a:hover {
    color: #111;
}

.list-group li.active a {
    color: #fff;
}

.list-group li.active a:hover {
    color: #ccc;
}

.course-error {
    padding: 9px;
    margin-bottom: 0px;
}

.course-result {
    /*padding: 0 1px;*/
    margin-bottom: 0px;
}

.course-selected-checkbox {
    display: none;
}

.course-info {
    transition: background-color .25s ease, color .25s ease, border .25s ease;
    background-color: #eee;
    border: 1px solid #eee;
    color: #333;
}

.selected-course {
    border: 1px solid #2c3e50;
    background-color: #2c3e50;
    color: #fff;
}

.course-info a {
    color: #fff !important;
}

.label-line {
    line-height: 2em;
}

.display-options-header {
    cursor: pointer;
}

.label-professor {
    font-weight: normal;
}

/* NEW SCHEDULES */

div[schedule] .canvas-cont {
    height: 500px;
    width: 700px;
    margin: 0 auto;

}

div[schedule] .schedule-loading {
    padding-right: 10px;
    padding-top: 8px !important;
    float: right;
}

@media screen and (max-width: 768px) {
    div[schedule] {
        overflow: hidden;
    }

    div[schedule] .canvas-cont {
        height: 500px;
        width: 320px;
        margin: 0 auto;
        overflow-x: scroll;
    }

    .schedule-loading {
        clear: both;
        padding-top: 15px;
        text-align: center;
        float: none !important;
    }

    .btn-xs-block {
        display: block;
    }
}

/* BOOTSTRAP EXTENSIONS */
.btn {
    transition: background-color .25s ease, box-shadow .125s ease;
}

.btn-group-dow {
    width: 100%;
}

select.ng-invalid {
    color: #ccc;
    font-style: italic;
}

.btn-dow {
    padding: 11px 9px;
    width: 14.28%;
}

.vert-spacer-sm {
    margin-bottom: 10px;
    width: 1px;
    float: left;
}

.vert-spacer-static-sm {
    margin-bottom: 10px;
    width: 1px;
}

.vert-spacer-md {
    margin-bottom: 20px;
    width: 1px;
    float: left;
}

.vert-spacer-static-md {
    margin-bottom: 20px;
    width: 1px;
}

@media screen and (max-width: 767px) {
    .smaller-sm {
        font-size: smaller;
    }

    .margin-bottom-sm {
        margin-bottom: 15px;
    }

    .inline-sm {
        display: inline-block;
    }

    .center-sm {
        display: block;
        text-align: center;
        float: none !important;
    }

    .block-sm {
        display: block;
    }

    .pull-right-sm {
        float: right;
    }

    .pull-left-sm {
        float: left;
    }

    #browse-contents .list-group-item {
        padding: 10px 8px
    }
}

@media screen and (min-width: 768px) {

    .panel-heading-controls {
        padding: 15px 15px 0px 10px;
    }

    .panel-control-overlap .panel-heading .panel-title {
        padding-top: 10px;
        padding-bottom: 10px;
    }

    .panel-control-overlap .panel-footer {
        transition: background-color .25s;
    }

    .panel-control-overlap .panel-body.ng-hide + .panel-footer {
        background: none;
        height: 0;
        padding-bottom: 0;
        padding-top: 0;
        transform: translate(0px, -50px);
        -webkit-transform: translate(0px, -50px);
        border: 0;
    }

    .pull-right-md {
        float: right;
    }

    .pull-left-md {
        float: left;
    }

}

.popover {
    color: #333 !important;
    width: 300px;
}

.popover a {
    color: #000 !important;
}

.popover .popover-white a {
    color: #fff !important;
}

.popover-title {
    display: block;
}

.rmp-rating h2 {
    color: #fff;
    text-align: center;
    display: block;
    margin: 0 auto;
    background-color: #2c3e50;
    border-radius: 50% 50%;
    height: 70px;
    width: 70px;
    line-height: 70px;
}

.rmp-rating {
    font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
    text-align: center;
}

span[professor-lookup] {
    cursor: pointer;
}

.inline-col {
    display: inline-block;
    vertical-align: top;
    float: none;
}

.course-cart-logo {
    font-size: 30px;
    display: inline-block;
    padding-right: 10px;
    padding-top: 4px;
}

.course-cart-item {
    border-style: solid;
    border-color: #ffffff;
    border-width: 0px;
    border-left-width: 10px;

}

#master_schedule_results {
    padding-top: 10px;
}

.schedule-notification {
    text-align: center;
}
/* ... */

